<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feavr</string>
    <string name="app_version">v1.0.0</string>

    <!-- Stats -->
    <string name="stats_text">HeartBeat over the last game played</string>

    <!-- Scan Dialog -->
    <string name="scan_dialog_title">Scanning for Heart Monitor...</string>
    <string name="cancel">Cancel</string>

    <!-- Single Player Activity -->
    <string name="single_title">Single Player VR Mode</string>

    <!-- Multiplayer VR Activity -->
    <string name="vr_title">Multiplayer VR Mode</string>
    <string name="ble_connect">Connect BLE Heart-Rate Monitor</string>
    <string name="watch_message">If you use the FeavrTracker APP on your Smartwatch, the heart rate will be tracked automatically.</string>
    <string name="vr_launch">Start Game</string>

    <!-- Multiplayer Control Activity -->
    <string name="control_title">Controller Mode</string>


    <!-- Bluetooth permission -->
    <string name="request_permissions_text">Without the location permission, the APP is unable to scan for Bluetooth LE devices, and will not be able to connect to the heartbeat monitor. Are you sure you want to deny this permission? (you will not be able to perform any measure without it)</string>
    <string name="request_permissions_settings_text">This APP requires location permission in order to scan for Bluetooth LE devices. Without it, you will not be able to connect to the Heart Beat Monitor. Do you want to open the APP settings in order to allow location permission?</string>
    <string name="request_bluetooth_text">This APP requires Bluetooth to connect to the Heart Rate Monitor. Are you sure you want to deny this permission? (you will not be able to perform any measure without it)</string>
    <string name="open_settings">Open APP settings</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="retry">Retry</string>
    <string name="permission_denied">Permission denied</string>
    <string name="unknown_device">n/a</string>
    <string name="bluetooth_required">Bluetooth Required</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">BLE State:</string>
    <string name="label_artikcloud_deviceid">ARTIK Cloud Device ID:</string>
    <string name="NA">N/A</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Notifications -->
    <string name="ble_notification_title">Connected to BLE device</string>


    <!-- Technical Settings Activity -->
    <string name="title_activity_technical_settings">Technical Settings</string>


    <!-- Menu items -->
    <string name="menu_connect">BLE Connect</string>
    <string name="menu_disconnect">BLE Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_logout_cloud">Logout</string>

    <!-- BarcodeCaptureActivity -->
    <string name="barcode_capture_hint">Scan the QR code on the FeaVR Control to establish connection.\nMake sure both devices are connected to the same network.</string>

    <!-- BarcodeGeneratorActivity -->
    <string name="barcode_generator_hint">Scan this QR code with the VR Player to establish connection.\nMake sure both devices are connected to the same network.</string>

    <!-- Technical settings -->
    <string name="technical_settings_text">In order to detect your device, make sure the Bluetooth
    is turned on and select your device from the list. If your device comply with Bluetooth
    Low-Energy norm, the APP will detect it automatically, you won\'t have any pairing to do. \nAll devices reachable are displayed on the list, select yours and the setting is done.</string>
    <string name="technical_settings_close">Back</string>
    <string name="scan">Connect to a device</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_to">Connected to \ </string>
    <string name="not_connected">No device connected</string>
    <string name="bpm">HR: \ </string>

    <!-- Technical settings -->
    <string name="user_settings_text">User Settings</string>
    <string name="title_activity_user_settings">User Settings</string>


    <!-- About -->
    <string name="about_text">FeaVR is an Horror Game in Virtual Reality, based on Unity and Native Android.</string>
    <string name="about_author">Developed at EPFL, CH by Jérémie Mayor and Nathan Quinteiro</string>
    <string name="action_about">About</string>
    <string name="action_github">Github</string>
    <string name="action_stats">Last Game Stats</string>

    <!-- menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_technical_settings">Technical Settings</string>
    <string name="action_settings">Settings</string>

    <string name="action_connect">Connect</string>
    <string name="action_high_score">High scores</string>
    <string name="action_help">Help</string>
    <string name="action_connect_multi">Connect multiplayer</string>


    <string name="becare">BLE Handler</string>

    <!-- GameTabe -->
    <string name="text_lamps">Lamps:</string>
    <string name="random_lamps">Random</string>
    <string name="hr_graph_text">HeartRate [p/m]</string>

    <!--
Google Vision
	-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="textSwMultiPlayer">Multi-player Mode :</string>
    <string name="textTvScanResult">Not connected</string>
    <string name="text_qr_code_generator">QR Code Generator</string>

    <string name="text_title_multi">Multiplayer mode  </string>
    <string name="text_info_multi">Generate the a QRCode on a device and scan it from the other device. Please make sure that the both devices are connected to internet and in the same network. </string>

    <string name="text_st_connection">Connection state : </string>
    <string name="text_current_st_connection"> no connected </string>
    <string name="text_current_st_connection_noIP">The QRCode scanned is not a valid address</string>
    <string name="text_current_st_connected">Correctly connected </string>
    <string name="text_current_st_connected_fail">fail to connect</string>

    <string name="text_qr_code_scanner">QR Code Scanner</string>
    <string name="text_reset_co">Reset connection</string>
    <string name="text_tw_ip_rec">None</string>
    <string name="text_test_connection">Test Connection</string>
    <string name="tvConnectionState">No Connected</string>
    <string name="tvConnectionStateCO">Successfully connected</string>


    <string name="sw1">1</string>
    <string name="sw2">2</string>
    <string name="sw3">3</string>
    <string name="sw4">4</string>
    <string name="sw5">5</string>
    <string name="sw6">6</string>
    <string name="sw7">7</string>
    <string name="sw8">8</string>
    <string name="sw9">9</string>
    <string name="sw10">10</string>
    <string name="sw11">11</string>
    <string name="sw12">12</string>
    <string name="sw13">13</string>
    <string name="sw14">14</string>
    <string name="sw15">15</string>


    <string name="text_unableReacheDB">Impossible to access Database</string>
    <string name="text_no_previous_game">No previous game saved.</string>
    <string name="text_noBPMRecorded">Sorry the last game played did not use a heart rate sensor. Stats can not be displayed.</string>


    <string name="text_no_found_network">Impossible to obtain network settings. Verify your connection.</string>

</resources>
