<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quinteiro.nathan.feavr.Activities.MultiPlayerConnectActivity"
    tools:showIn="@layout/app_bar_connection_multiplayer"



    >


    <TextView
        android:id="@+id/tv_title_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/text_title_multi"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_text_multi"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/tv_title_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:text="@string/text_info_multi" />



    <Button
        android:id="@+id/butt_mult_genQR"
        android:layout_below="@id/tv_text_multi"

        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/text_qr_code_generator"

    />


    <Button
        android:id="@+id/butt_mult_scanQR"
        android:layout_below="@id/butt_mult_genQR"

        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/text_qr_code_scanner"

     />

    <Button
        android:id="@+id/butt_mult_resetCO"
        android:layout_below="@id/butt_mult_scanQR"

        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/text_reset_co"

        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/butt_mult_resetCO"
        android:layout_centerHorizontal="true"

        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_connection_state_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_st_connection"
            />

        <TextView
            android:id="@+id/tv_curr_connection_state_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:text="@string/text_current_st_connection"
            />





    </LinearLayout>


</RelativeLayout>
