<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quinteiro.nathan.feavr.Activities.ConnectActivity"
    tools:showIn="@layout/app_bar_connection">


    <Switch
        android:id="@+id/swMultiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textSwMultiPlayer" />

    <Button
        android:id="@+id/btGenerate"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/swMultiPlayer"

        android:layout_marginTop="12dp"
        android:text="@string/text_qr_code_generator"

        android:visibility="invisible"/>

    <Button
        android:id="@+id/btScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btGenerate"


        android:layout_marginTop="10dp"
        android:text="@string/text_qr_code_scanner"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btTestCo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btScan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:text="@string/text_test_connection" />


    <TextView
        android:id="@+id/tvConnectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btTestCo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:text="@string/tvConnectionState" />



    <TextView
        android:id="@+id/tvScanResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/textTvScanResult" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvScanResult"
        android:layout_alignStart="@+id/tvScanResult"
        android:layout_marginBottom="48dp"
        android:text="udp test send" />




</RelativeLayout>
