<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quinteiro.nathan.feavr.Activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/hand">

    <ImageView
        android:id="@+id/imageView"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_logo" />

    <Button
        android:id="@+id/btSingle"
        style="@style/button_style"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btVR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/single_title" />

    <Button
        android:id="@+id/btVR"
        android:layout_margin="@dimen/activity_vertical_margin"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/vr_title" />


    <Button
        android:id="@+id/btControl"
        android:layout_margin="@dimen/activity_vertical_margin"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btVR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/control_title" />


</RelativeLayout>
