<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="quinteiro.nathan.feavr.Activities.TechnicalSettingsActivity"
    tools:showIn="@layout/app_bar_technical_settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout1"
        android:layout_above="@+id/btClose">


        <TextView
            android:text="@string/technical_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/technical_settings_text_size"
            android:id="@+id/tv_text"
            tools:ignore="SpUsage" />

    </RelativeLayout>

    <Button
        android:text="@string/technical_settings_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btClose" />

    <quinteiro.nathan.feavr.UI.BatteryProgressView
        android:layout_width="@dimen/technical_settings_battery_width"
        android:layout_height="@dimen/technical_settings_battery_height"
        android:id="@+id/batteryView"
        custom:textColor="@android:color/black"
        custom:progressColor="@color/colorPrimary"
        custom:circleColor="@color/colorGrayDark"
        custom:batteryColor="@color/colorPrimary"
        custom:batteryAlertColor="@color/colorAlert"
        custom:innerStrokeWidth="@dimen/technical_settings_battery_inner_margin"
        custom:circleStrokeWidth="@dimen/technical_settings_battery_circle_margin"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/batteryView">

        <TextView
            android:text="Connected to "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/technical_settings_text_size"
            android:id="@+id/tv_device" />


        <TextView
            android:text="BPM : 120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_device"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/technical_settings_text_size"
            android:id="@+id/tv_bpm" />
    </RelativeLayout>

    <Button
        android:text="@string/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:id="@+id/btScan"
        android:layout_below="@+id/batteryView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

</RelativeLayout>
